--- a/server/src/Admin/AdCourses/AdCourses.scss
+++ b/server/src/Admin/AdCourses/AdCourses.scss
@@ -72,8 +72,8 @@ body {
   .ant-modal-footer .ant-btn-primary {
     background-color: #1b1834;
     border: none;
-    &:hover {
-      background-color: $button-hover;
-    }
+    // &:hover {
+    //   background-color: $button-hover;
+    // }
   }
 }
