--- a/client/src/Page/Home/Testimonials/Testimonials.module.scss
+++ b/client/src/Page/Home/Testimonials/Testimonials.module.scss
@@ -20,17 +20,15 @@
 
     .testimonials__cards {
       display: grid;
-      grid-gap: 20px; /* Khoảng cách giữa các card */
-      width: 100%; /* Chiếm toàn bộ chiều rộng của container */
-      max-width: 1000px; /* Giới hạn chiều rộng tối đa */
-      margin: 0 auto; /* Căn giữa container */
-
-      /* Responsive grid layout */
+      grid-gap: 20px;
+      width: 100%;
+      max-width: 1000px;
+      margin: 0 auto;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      /* Chia đều cột card với min-width 200px và tối đa chiếm 1 phần không gian của container */
     }
 
     .reviewCard {
+      position: relative;
       background-color: #242145;
       width: 100%;
       height: auto;
@@ -40,31 +38,38 @@
       align-items: center;
       border: 1px solid #ddd;
       padding: 10px;
+      margin-bottom: 10px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       font-size: 14px;
     }
 
-    // .avatar {
-    //   margin-bottom: 10px;
-    // }
+    .reviewerName {
+      position: absolute;
+      top: -16px;
+      left: 10px;
+      // background-color: #ddd;
+      color: #ff7b47;
+      // font-weight: bold;
+      padding: 0 8px;
+      font-size: 14px;
+      line-height: 1;
+      z-index: 1;
+    }
 
     .reviewText {
       font-size: 14px;
-      width: 100%; /* Đảm bảo văn bản chiếm toàn bộ chiều rộng của card */
+      width: 100%;
       margin-bottom: 0;
       color: #ffffff;
       line-height: 1.2;
 
-      /* Đảm bảo văn bản xuống dòng khi hết không gian */
-      word-wrap: break-word; /* Cho phép từ dài xuống dòng khi cần */
-      word-break: break-word; /* Đảm bảo từ không bị kéo dài ra ngoài */
+      word-wrap: break-word;
+      word-break: break-word;
 
-      /* Giới hạn tối đa 2 dòng, nếu muốn */
       display: -webkit-box;
-      -webkit-line-clamp: 2; /* Giới hạn tối đa 2 dòng */
+      -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
 
-      /* Ẩn phần văn bản vượt quá */
       overflow: hidden;
       text-overflow: ellipsis;
     }
